# xstatic-bootswatch

./: .gitignore  .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py  tox.ini
xstatic/pkg/bootswatch/: __init__.py
