[metadata]
name = XStatic-bootswatch
description = bootswatch 3.3.7 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = http://bootswatch.com
keywords = bootswatch xstatic
license = MIT
zip_safe = False

[bdist_wheel]
universal = True
